--- a/results.html
+++ b/results.html
@@ -74,12 +74,12 @@ START: results.html
           <div class="stats-row reveal" style="--d:220ms" aria-label="Key stats">
             <div class="stat glass">
               <div class="stat-k">Ad spend</div>
-              <div class="stat-v">$14M</div>
+              <div class="stat-v">$NZ 14M</div>
               <div class="stat-s">Managed for clients</div>
             </div>
             <div class="stat glass">
               <div class="stat-k">Revenue generated</div>
-              <div class="stat-v">$150M</div>
+              <div class="stat-v">$NZ 150M</div>
               <div class="stat-s">Attributed client revenue</div>
             </div>
             <div class="stat glass">
@@ -170,18 +170,19 @@ START: results.html
     </section>
 
     <!-- TESTIMONIALS (all) -->
-    <section class="section watch-section" id="resultsTestimonials">
+       <!-- TESTIMONIALS (under engine map) -->
+    <section class="section watch-section" id="testimonials">
       <div class="container">
         <div class="section-head reveal">
           <div class="eyebrow">TESTIMONIALS</div>
-          <h2 class="h2">What clients say.</h2>
-          <p class="p">Image placeholders included — swap them with your own later.</p>
+          <h2 class="h2">Real feedback. Real outcomes.</h2>
         </div>
 
         <div class="t-grid">
           <article class="t-card glass reveal">
             <div class="t-top">
-              <div class="t-avatar" aria-hidden="true"></div>
+              <img class="t-avatar-img" src="./nicky_proof1.png" alt="" loading="lazy"
+                   onerror="this.style.display='none'">
               <div>
                 <div class="t-name">Nicky M.</div>
                 <div class="t-role">No1 Real Estate Agent — West Auckland</div>
@@ -192,7 +193,8 @@ START: results.html
 
           <article class="t-card glass reveal" style="--d:80ms">
             <div class="t-top">
-              <div class="t-avatar" aria-hidden="true"></div>
+              <img class="t-avatar-img" src="carmeo-proof2.jpg" alt="" loading="lazy"
+                   onerror="this.style.display='none'">
               <div>
                 <div class="t-name">Carolyn M.</div>
                 <div class="t-role">Real Estate Agent — Napier</div>
@@ -203,7 +205,8 @@ START: results.html
 
           <article class="t-card glass reveal" style="--d:160ms">
             <div class="t-top">
-              <div class="t-avatar" aria-hidden="true"></div>
+              <img class="t-avatar-img" src="./amanda_proof3.jpg" alt="" loading="lazy"
+                   onerror="this.style.display='none'">
               <div>
                 <div class="t-name">Amanda S.</div>
                 <div class="t-role">Real Estate Agent — Wellington</div>
@@ -214,7 +217,8 @@ START: results.html
 
           <article class="t-card glass reveal">
             <div class="t-top">
-              <div class="t-avatar" aria-hidden="true"></div>
+              <img class="t-avatar-img" src="./rachel-j-proof3.png" alt="" loading="lazy"
+                   onerror="this.style.display='none'">
               <div>
                 <div class="t-name">Rachel J.</div>
                 <div class="t-role">CEO — Fiji Yacht Cruises</div>
@@ -225,7 +229,8 @@ START: results.html
 
           <article class="t-card glass reveal" style="--d:80ms">
             <div class="t-top">
-              <div class="t-avatar" aria-hidden="true"></div>
+              <img class="t-avatar-img" src="./paul_proof4.png" alt="" loading="lazy"
+                   onerror="this.style.display='none'">
               <div>
                 <div class="t-name">Paul S.</div>
                 <div class="t-role">Risk Insurance</div>
@@ -236,7 +241,8 @@ START: results.html
 
           <article class="t-card glass reveal" style="--d:160ms">
             <div class="t-top">
-              <div class="t-avatar" aria-hidden="true"></div>
+              <img class="t-avatar-img" src="./mike-proof5.png" alt="" loading="lazy"
+                   onerror="this.style.display='none'">
               <div>
                 <div class="t-name">Mike M.</div>
                 <div class="t-role">ACC Business Advice</div>
@@ -244,6 +250,8 @@ START: results.html
             </div>
             <p class="t-quote">“My site generates 20 to 25 leads a month returning $8k – $10k to me in commission per month. It works!”</p>
           </article>
+        </div>
+      </div>
 
           <!-- Additional “recent feedback” style testimonials (placeholders) -->
           <article class="t-card glass reveal">
@@ -278,6 +286,37 @@ START: results.html
             </div>
             <p class="t-quote">“So far, I’ve spent $3,871 (79 leads) and my return been $110,446.”</p>
           </article>
+        </div>
+      </div>
+    </section>
+
+    <!-- VIDEO PROOF (home) -->
+    <section class="section watch-section" id="videos">
+      <div class="container">
+        <div class="section-head reveal">
+          <div class="eyebrow">VIDEO PROOF</div>
+          <h2 class="h2">Short proof clips </h2>
+        </div>
+
+        <div class="video-row reveal" style="--d:120ms" aria-label="Video proof row">
+          <video class="proof-video" controls playsinline preload="metadata">
+            <source src="./clip-01.mp4" type="video/mp4">
+          </video>
+          <video class="proof-video" controls playsinline preload="metadata">
+            <source src="./clip-02.mp4" type="video/mp4">
+          </video>
+          <video class="proof-video" controls playsinline preload="metadata">
+            <source src="./clip-03.mp4" type="video/mp4">
+          </video>
+          <video class="proof-video" controls playsinline preload="metadata">
+            <source src="./clip-04.mp4" type="video/mp4">
+          </video>
+          <video class="proof-video" controls playsinline preload="metadata">
+            <source src="./clip-05.mp4" type="video/mp4">
+          </video>
+          <video class="proof-video" controls playsinline preload="metadata">
+            <source src="./clip-06.mp4" type="video/mp4">
+          </video>
         </div>
       </div>
     </section>
